--- a/i3/config
+++ b/i3/config
@@ -163,7 +163,7 @@ bindsym --release $mod+a exec --no-startup-id xvkbd -no-jump-pointer -xsendevent
 bindsym --release $mod+f exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Cf'
 bindsym --release $mod+s exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Cs'
 bindsym --release $mod+t exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Ct'
-bindsym --release $mod+w exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Cv'
+bindsym --release $mod+w exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Cw'
 bindsym --release $mod+r exec --no-startup-id xvkbd -no-jump-pointer -xsendevent -text '\Cr'
 bindsym --release $mod+Up exec --no-startup-id xdotool key --clearmodifiers Page_Up
 bindsym --release $mod+Down exec --no-startup-id xdotool key --clearmodifiers Page_Down
