--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -47,8 +47,13 @@ command=/home/calebe94/.config/i3/scripts/get_brightness --keyboard
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
+[volume_icon]
+full_text=
+command=pavucontrol
+separator=false
+
 [volume]
-label= 
+#label= 
 #instance=Master
 #instance=PCM
 interval=1
@@ -101,9 +106,9 @@ signal=10
 #interval=10
 #separator=false
 
-[clickme]
+[wifi_icon]
 #align=center
-full_text= Wifi
+full_text= 
 command=st nmtui
 separator=false 
 
