--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -1,22 +1,10 @@
-gesture: swipe up 3	xdotool key super+f
-gesture: swipe down 3	xdotool key super+shift+space
+gesture: swipe up 3	xdotool key super+semicolon
+gesture: swipe down 3	xdotool key super+period
 gesture: swipe up 4	xdotool key super+Up
 gesture: swipe down 4	xdotool key super+Down
 
-gesture: swipe right 3	xdotool key super+ctrl+Right
-gesture: swipe left 3	xdotool key super+ctrl+Left
-
-gesture: swipe right 4	xdotool key super+Right
-gesture: swipe left 4	xdotool key super+Left
-
-gesture: pinch in 3	xdotool key super+w
-gesture: pinch out 3	xdotool key super+a
-
-gesture: pinch in 4     xdotool key super+space
-gesture: pinch out 4    xdotool key super+a
-
-gesture: pinch in 5     xdotool key super+w
-gesture: pinch out 5    xdotool key super+a
+gesture: swipe right 3	xdotool key super+alt+Left
+gesture: swipe left 3	xdotool key super+alt+Right
 
 gesture: pinch out 2     xdotool key ctrl+KP_Add
 gesture: pinch in 2    xdotool key ctrl+KP_Subtract
