--- a/i3/py3status.conf
+++ b/i3/py3status.conf
@@ -1,8 +1,16 @@
 order += "backlight"
-order += "keyboard_backlight"order += "volume master"
+order += "keyboard_backlight"
+order += "volume master"
 order += "battery_level"
 order += "wifi"
 order += "time"
+order += "external_script"
+
+external_script {
+    format = "   Menu   "
+    script_path = "/usr/bin/whoami"
+    on_click 1 = "exec $HOME/.config/i3/scripts/power.sh"
+}
 
 keyboard_backlight {
     cache_timeout = 0.1
@@ -11,7 +19,7 @@ keyboard_backlight {
 }
 
 battery_level {
-    format = "{icon} {percent}%"
+    format = "⚡ {percent}%"
     cache_timeout = 0.1
 }
 
