--- a/i3/config
+++ b/i3/config
@@ -41,21 +41,6 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 new_window pixel 0
 
-# Workspace naming
-set $workspace1 "1: Utilities "
-set $workspace2 "2: Navigation "
-set $workspace3 "3: Folders "
-set $workspace4 "4: Code Editing "
-set $workspace5 "5: Texting "
-set $workspace6 "6: Mail " 
-set $workspace7 "7: Notes "
-set $workspace8 "8: PDF "
-set $workspace9 "9: Tests "
-set $workspace10 "10: Music "
-
-# Web apps
-assign [class=Firefox|qutebrowser|Chromium|Navigator|Nightly] $workspace2
-
 # ***************** #
 # ---- i3-gaps ---- #
 # ***************** #
@@ -78,7 +63,7 @@ for_window [class=".*"] split toggle
 # ************************** #
 for_window [class="St"] floating enable;
 for_window [class="Pavucontrol"] floating enable;
-#for_window [window_role="PictureInPicture"] fullscreen disable; floating enable, sticky enable;
+
 # i3wm bar
 bar {
         # Bar program
@@ -100,28 +85,24 @@ bar {
 
 # ------------------------------------------ #
 # ========= Startup Applications =========== #
-# ------------------------------------------ #
-# Invert scrolling
-#exec_always --no-startup-id synclient NaturalScrolling=1 VertScrollDelta=-113 
 
+# Screenshot tool
 exec_always flameshot
-# Disable tap while typing
-#exec syndaemon -i 0.3 -t -K -R
 
-# Apps on start
-#exec_always choose_wallpaper
+# i3-workspace-names: Dynamic workspace name 
+exec_always --no-startup-id exec i3-workspace-names-daemon
 
-#set $feh exec --no-startup-id 
-#exec feh --bg-scale $HOME/.dotfiles/wallpapers/youshouldbeworkingnow.jpg
-#exec feh --bg-scale $HOME/.config/i3/wallpaper/wallpaper1.png
-
-#exec --no-startup-id nitrogen --restore
+# Dynamic Wallpaper
 exec_always --no-startup-id $HOME/.config/i3/scripts/GoesWallpaper/goes_dynamic_wallpaper -r 1808
+
 # Sysmem compositor
-exec_always compton
+#exec_always compton 
+exec_always compton -f --blur-background --inactive-opacity=0.95 --backend glx --vsync opengl-swc
+
 exec xmodmap .Xmodmap
 exec libinput-gestures-setup start
 exec_always lxpolkit
+exec volnoti -a 0.0
 
 # ---------------------------------------- #
 # ========= Bindsym(Shortcuts) =========== #
@@ -203,29 +184,29 @@ bindsym $mod+p exec flameshot gui -p $HOME/Pictures/Screenshots
 # focus the parent container
 bindsym $mod+a focus parent
 
-# switch to workspace
-bindsym $ctrl+1 workspace $workspace1
-bindsym $ctrl+2 workspace $workspace2
-bindsym $ctrl+3 workspace $workspace3
-bindsym $ctrl+4 workspace $workspace4
-bindsym $ctrl+5 workspace $workspace5
-bindsym $ctrl+6 workspace $workspace6
-bindsym $ctrl+7 workspace $workspace7
-bindsym $ctrl+8 workspace $workspace8
-bindsym $ctrl+9 workspace $workspace9
-bindsym $ctrl+0 workspace $workspace10
+# switch to workspace 
+bindsym $ctrl+1 workspace number 1
+bindsym $ctrl+2 workspace number 2
+bindsym $ctrl+3 workspace number 3
+bindsym $ctrl+4 workspace number 4
+bindsym $ctrl+5 workspace number 5
+bindsym $ctrl+6 workspace number 6
+bindsym $ctrl+7 workspace number 7
+bindsym $ctrl+8 workspace number 8
+bindsym $ctrl+9 workspace number 9
+bindsym $ctrl+0 workspace number 0
 
 # move focused container to workspace
-bindsym $ctrl+Shift+1 move container to workspace $workspace1
-bindsym $ctrl+Shift+2 move container to workspace $workspace2
-bindsym $ctrl+Shift+3 move container to workspace $workspace3
-bindsym $ctrl+Shift+4 move container to workspace $workspace4
-bindsym $ctrl+Shift+5 move container to workspace $workspace5
-bindsym $ctrl+Shift+6 move container to workspace $workspace6
-bindsym $ctrl+Shift+7 move container to workspace $workspace7
-bindsym $ctrl+Shift+8 move container to workspace $workspace8
-bindsym $ctrl+Shift+9 move container to workspace $workspace9
-bindsym $ctrl+Shift+0 move container to workspace $workspace10
+bindsym $ctrl+Shift+1 move container to workspace number 1
+bindsym $ctrl+Shift+2 move container to workspace number 2
+bindsym $ctrl+Shift+3 move container to workspace number 3
+bindsym $ctrl+Shift+4 move container to workspace number 4
+bindsym $ctrl+Shift+5 move container to workspace number 5
+bindsym $ctrl+Shift+6 move container to workspace number 6
+bindsym $ctrl+Shift+7 move container to workspace number 7
+bindsym $ctrl+Shift+8 move container to workspace number 8
+bindsym $ctrl+Shift+9 move container to workspace number 9
+bindsym $ctrl+Shift+0 move container to workspace number 0
 
 # URGENT WORKSPACES
 bindsym $mod+e [urgent=latest] focus
