[Fix #26] Created json file with i3-workspaces icons.

--- a/i3/py3status.conf
+++ b/i3/py3status.conf
@@ -7,15 +7,15 @@ order += "time"
 order += "external_script"
 
 external_script {
-    format = "   Menu   "
+    format = "    "
     script_path = "/usr/bin/whoami"
     on_click 1 = "exec $HOME/.config/i3/scripts/power.sh"
 }
 
 keyboard_backlight {
     cache_timeout = 0.1
-    on_click 4 = "exec sudo $HOME/.config/i3/scripts/keyboard_backlight dec"
-    on_click 5 = "exec sudo $HOME/.config/i3/scripts/keyboard_backlight inc"
+    on_click 4 = "exec $HOME/.config/i3/scripts/backlight -s keyboard -t dec"
+    on_click 5 = "exec $HOME/.config/i3/scripts/backlight -s keyboard -t inc"
 }
 
 battery_level {
@@ -43,7 +43,7 @@ volume master {
 backlight {
     format=" {level}%"
     cache_timeout=0.1
-    on_click 4 = "exec xbacklight -dec 10"
-    on_click 5 = "exec xbacklight -inc 10"
+    on_click 4 = "exec $HOME/.config/i3/scripts/backlight -s display -t dec"
+    on_click 5 = "exec $HOME/.config/i3/scripts/backlight -s display -t inc"
 }
 
