--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -3,6 +3,9 @@ gesture: swipe down 3	xdotool key super+period
 gesture: swipe up 4	xdotool key super+Up
 gesture: swipe down 4	xdotool key super+Down
 
+gesture: swipe right 2	xdotool key alt+Left
+gesture: swipe left 2	xdotool key alt+Right
+
 gesture: swipe right 3	xdotool key super+alt+Left
 gesture: swipe left 3	xdotool key super+alt+Right
 
